<resources>
    <string name="app_name">Water Expert</string>
    <string name="to_check_the_potability_of_water_using_some_tests">To Check the Potability of Water using some Tests</string>
    <string name="to_check_the_quality_of_water_using_some_external_features">To Check the Quality of Water using some External Features</string>
    <string name="to_check_the_potability_of_water_based_upon_water_quality_index">To Check the Potability of Water based upon Water Quality Index</string>
    <string name="to_know_the_informantion_about_any_parameter">To Know the Informantion about Any Parameter</string>
    <string name="through_this_we_can_check_the_units_minimum_and_maximum_range_values_and_their_effects_for_the_entered_parameter_value">Through this we can check the units, Minimum and Maximum Range values and their effects for the entered parameter value.</string>
    <string name="_1_colour_hazen">Colour(Hazen)</string>
    <string name="submit">Submit</string>
    <string name="no_data_found">No Data Found</string>
    <string name="this_gives_the_information_based_on_the_parameter_of_water_quality">This Gives the Information Based on the Parameter of Water Quality</string>
    <string-array name="source">
        <item>Source</item>

        <item>River</item>
        <item>Lake</item>

    </string-array>

    <string-array name="turbudity">
        <item>Turbudity</item>
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>

    </string-array>

    <string-array name="taste">
        <item>Taste</item>
        <item>Normal</item>
        <item>Salty</item>
        <item>Sweety</item>
        <item>Bitter</item>
        <item>Metallic</item>
        <item>Medical</item>
    </string-array>

    <string-array name="odour">
        <item>Odour</item>
        <item>Rotten Egg</item>
        <item>Sulphur</item>
        <item>Fishy</item>
        <item>Moldy</item>
        <item>Musty</item>
        <item>Earthen</item>
        <item>Grassy</item>
        <item>Bleach or chlorine</item>
        <item>Petroleum-Gasoline-Fuel-Sovent Odour</item>
        <item>Wet Dog Odour</item>
        <item>Sewage Odour</item>
    </string-array>

    <string-array name="parameters">
        <item>Color</item>
        <item>Odour</item>
        <item>Turbudity</item>
        <item>PH</item>
        <item>Taste</item>
        <item>Total dissolved solids</item>
        <item>Total Hardness</item>
    </string-array>

    <string-array name="colour">
        <item>Colour</item>
        <item>Red-Brown</item>
        <item>Black-Dark Brown</item>
        <item>Yellow-Brown</item>
        <item>Blue-Green</item>
        <item>White</item>
        <item>Black</item>
        <item>Orange</item>
        <item>Yellow</item>
        <item>Cloudy-White</item>
    </string-array>
</resources>
