<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.apbc.waterexpert.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/banner"
                android:padding="5dp"

                android:paddingBottom="30dp"/>

            <Button
                android:paddingBottom="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="40dp"
                android:onClick="button1"
                android:text="@string/to_check_the_potability_of_water_using_some_tests"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="button2"
                android:padding="40dp"
                android:paddingBottom="30dp"
                android:text="@string/to_check_the_quality_of_water_using_some_external_features" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="40dp"

                android:paddingBottom="30dp"
                android:text="@string/to_check_the_potability_of_water_based_upon_water_quality_index"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="40dp"

                android:paddingBottom="30dp"
                android:text="@string/to_know_the_informantion_about_any_parameter"/>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
