<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.apbc.waterexpert.Problem4">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:paddingBottom="30dp"
                android:scaleType="fitXY"

                app:srcCompat="@drawable/banner2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:padding="40dp"
                android:paddingBottom="40dp"
                android:textAlignment="center"
                android:id="@+id/problem2header"
                android:text="@string/this_gives_the_information_based_on_the_parameter_of_water_quality"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/problem4linear">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="10dp"
                    android:paddingBottom="40dp">

                    <android.support.v4.widget.Space
                        android:layout_width="10dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <Spinner
                        android:id="@+id/spin"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:entries="@array/parameters"

                        android:padding="10dp" />

                    <android.support.v4.widget.Space
                        android:layout_width="10dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="40dp"
                    android:paddingBottom="40dp">

                    <android.support.v4.widget.Space
                        android:layout_width="10dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <Button

                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/submit"
                        android:onClick="submitted4"
                        android:padding="10dp" />

                    <android.support.v4.widget.Space
                        android:layout_width="10dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/problem4ResultLayout"
                android:orientation="vertical"
                android:layout_marginTop="30dp"
                android:padding="16dp"

                android:visibility="gone">
                <TextView
                    android:id="@+id/problem4ResultText"
                    android:layout_width="wrap_content"
                    android:textSize="18sp"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:textColor="@android:color/background_dark"
                    android:background="@drawable/corner"
                    android:layout_height="wrap_content"
                    android:text="@string/no_data_found"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>






    </android.support.constraint.ConstraintLayout>
